quit() now returns no error under normal circumstances. bug 185360 r=jag,neil